src/client/src/App.css
* {
  margin: 0;
}

.filterField {
  width: 250px;
  padding-right: 7vh;
}

.selectWrapper{
  border-radius: 5px;
  margin-top: 10px;

  display:inline-block;
  overflow:hidden;
  background:#cccccc;
  border:1px solid #787878;
}

.searchHeader{
  float: left;
  margin-left: 200px;
}

.navbar{

}



.selectBox{
  width: 150px;
  height:54px;
  border:0px;
  outline:none;
  font-family: "Raleway";
  font-size: 1em;
  padding-left: .7rem;
}

.row {
  display: flex;
  text-align: center;
  justify-content: center;
  align-items: center;
}

.largeCol {
  flex: 2;
  padding-left: 5vh;
  padding-top: 10vh;
  padding-right: 5vh;
}

.smallCol{
  flex:1;
}

.container {
  max-width: 100vw;
  padding: 0 1rem;
}



.list{
  display: flex;
  flex-direction: row;
}

.button {
  padding: 15px 32px; 
}

.ride{
  display: flex;
  flex-direction: row;
}

.rides{
  justify-content: center;
  display: grid;
  grid-template-columns: 50% 35%;
}

.ridePhoto{
  display: block;
  height: auto;
  width: 220px;
  padding-right: 100px;
  margin-left: -300px;
  z-index: -99;
  border-radius: 10%;
  object-fit: cover;
}

p {
  font-size: 25px;
}

h1 {
  margin-top: 2rem;
  margin-bottom: 2rem;
  font-size: 3em;
  text-align: center;


}




h2 {
  /* margin-top: -1.1rem;
  margin-bottom: 1.8rem;
  vertical-align: middle; */
  position: relative;
  font-size: 2em;
  top: 17px;
  left: 66px;
}

.h3RiderInfo{
  position: relative;
  left: 66px;
}

.address{
  display: flex;
  flex-direction: row;
}
.category{
  display: inline-block; 
  width: 120px;
}

	
.homeImage{
  position: relative;
  float: left;
  left: 0px;
  top: 1px;
  height: auto;
  width: auto;
  margin: 10px;
  border-radius: 25px;
}

img {
  position: relative;
  float: left;
  left: 70px;
  top: 1px;
}

.homepageAboutUs{
  font-family: "Raleway";
}


.homepageText{
  font-family: "Raleway";
  text-align: justify;
  text-align-last: center;
  font-size: 30px;
}

.top {
  margin-top: 1rem;
  display: flex;
  gap: 1rem;
  justify-content: center;
}

input {
  border: none;
  outline: none;
  width: 100%;
  padding: 0.5rem;
  padding-left: 1.4rem;
  border-bottom: 1px solid #08497A;
  font-family: "Raleway";
  font-size: 1em;
}

.add {
  background-color: #08497A;
  color: #fff;
  padding: 0.8rem 1.6rem;
  border-radius: 2px;
  cursor: pointer;
}

.item {
  position: relative;
  margin-top: 1rem;
  margin-bottom: 5rem;
  border-radius: 5%;
  /* background-image: url("./lax.png");
  background-size: 500px 190px;
  background-repeat: no-repeat; */
  /*background-color: #2774AE;*/
  background-image: linear-gradient(to right top, #08497a, #115387, #195e94, #2069a1, #2774ae);  
  padding: 1.3rem 3rem;
  font-size: 1.1em;
  color: white;
  line-height: 1.4em;
  width: 300px;
  margin-left: auto;
  margin-right: auto;
  display: flex;
  flex-direction: row;
  
}




.filter {
  position: relative;
  margin-top: 2rem;
  margin-bottom: 3.8rem;
  background-color: #f3f3f3;
  color: #fff;
  border-radius: 5px;
  font-size: 1.1em;
  line-height: 1.4em;
  width: 800px;
  margin-left: auto;
  margin-right: auto;
  display: flex;
  flex-direction: row;
}

.icons {
  position: absolute;
  top: 52%;
  transform: translateY(-50%);
  right: 25px;
  display: flex;
  gap: 0.5rem;
}

i {
  cursor: pointer;
}

.ulHeader{
  list-style-type: none;
  margin: 0;
  padding: 0;
  overflow: hidden;
  background-color: white;
  border-bottom: 1px solid #2774AE;
  height: 75px;
  /*position:fixed;
  width:100%;

  z-index: 99;
 */
}

.routeHeader{
  font-size: 1em;
  padding-top: 4px;
  padding-right: 10px;
  color: black;
  text-align: center;
  text-decoration: none;
  display: inline-block;
  vertical-align: middle;
  -webkit-transform: perspective(1px) translateZ(0);
  transform: perspective(1px) translateZ(0);
  box-shadow: 0 0 1px rgba(0, 0, 0, 0);
  position: relative;
  overflow: hidden;
}

.routeHeader::before{
  content: "";
  position: absolute;
  z-index: -1;
  left: 0;
  right: 0;
  bottom: 0;
  background: #2774AE;
  height: 4px;
  -webkit-transform: translateY(4px);
  transform: translateY(4px);
  -webkit-transition-property: transform;
  transition-property: transform;
  -webkit-transition-duration: 0.3s;
  transition-duration: 0.3s;
  -webkit-transition-timing-function: ease-out;
  transition-timing-function: ease-out;
}

.routeHeader:hover:before, .routeHeader:focus:before, .routeHeader:active:before {
  /*background-color: #2774AE;*/
  -webkit-transform: translateY(0);
  transform: translateY(0);
}
li{
  float: right;
}

logo {
  float: left;
  width: 270px;
}

li a {
  /*display: block;
  
  */
  color: black;
  text-align: center;
  padding: 27px 16px;
  text-decoration: none;
  font-size: 1em;
  display: inline-block;
  vertical-align: middle;
  -webkit-transform: perspective(1px) translateZ(0);
  transform: perspective(1px) translateZ(0);
  box-shadow: 0 0 1px rgba(0, 0, 0, 0);
  position: relative;
  overflow: hidden;
}

li a:before {
  content: "";
  position: absolute;
  z-index: -1;
  left: 0;
  right: 0;
  bottom: 0;
  background: #2774AE;
  height: 4px;
  -webkit-transform: translateY(4px);
  transform: translateY(4px);
  -webkit-transition-property: transform;
  transition-property: transform;
  -webkit-transition-duration: 0.3s;
  transition-duration: 0.3s;
  -webkit-transition-timing-function: ease-out;
  transition-timing-function: ease-out;
}
li a:hover:before, li a:focus:before, li a:active:before {
  /*background-color: #2774AE;*/
  -webkit-transform: translateY(0);
  transform: translateY(0);
}

